--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <span id="timeformat"></span>
   </div>
   <dialog id="dialogbox">
-    <div class="menu">Alarm</div>
+    <div class="menu"><a href="alarm.html">Alarm</a></div>
     <div class="menu">Stopwatch</div>
     <div class="menu">Timer</div>
   </dialog>
